policies/gatekeeper/gatekeeper-constraints.yaml
apiVersion: v1
items:
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: K8sDenyPrivileged
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"constraints.gatekeeper.sh/v1beta1","kind":"K8sDenyPrivileged","metadata":{"annotations":{},"name":"deny-privileged-containers"},"spec":{"match":{"excludedNamespaces":["kube-system","gatekeeper-system"],"kinds":[{"apiGroups":[""],"kinds":["Pod"]}]}}}
    creationTimestamp: "2026-03-17T13:57:51Z"
    generation: 1
    name: deny-privileged-containers
    resourceVersion: "1773763776710031020"
    uid: 34927284-aad6-4df2-a3cb-29099eb2d2c8
  spec:
    match:
      excludedNamespaces:
      - kube-system
      - gatekeeper-system
      kinds:
      - apiGroups:
        - ""
        kinds:
        - Pod
  status:
    auditTimestamp: "2026-03-17T16:09:29Z"
    byPod:
    - constraintUID: 34927284-aad6-4df2-a3cb-29099eb2d2c8
      enforced: true
      id: gatekeeper-audit-6cb977c96f-xps9q
      observedGeneration: 1
      operations:
      - audit
      - mutation-status
      - status
    - constraintUID: 34927284-aad6-4df2-a3cb-29099eb2d2c8
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-4v7fp
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    - constraintUID: 34927284-aad6-4df2-a3cb-29099eb2d2c8
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-fhgs5
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    - constraintUID: 34927284-aad6-4df2-a3cb-29099eb2d2c8
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-jt2lf
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    totalViolations: 0
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: K8sRequireLimits
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"constraints.gatekeeper.sh/v1beta1","kind":"K8sRequireLimits","metadata":{"annotations":{},"name":"require-resource-limits"},"spec":{"match":{"excludedNamespaces":["kube-system","gatekeeper-system","security-tools"],"kinds":[{"apiGroups":[""],"kinds":["Pod"]}]}}}
    creationTimestamp: "2026-03-17T13:57:52Z"
    generation: 1
    name: require-resource-limits
    resourceVersion: "1773763776667711016"
    uid: 79ffa0c1-4e84-4b5b-9f79-569c03f8474c
  spec:
    match:
      excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - security-tools
      kinds:
      - apiGroups:
        - ""
        kinds:
        - Pod
  status:
    auditTimestamp: "2026-03-17T16:09:29Z"
    byPod:
    - constraintUID: 79ffa0c1-4e84-4b5b-9f79-569c03f8474c
      enforced: true
      id: gatekeeper-audit-6cb977c96f-xps9q
      observedGeneration: 1
      operations:
      - audit
      - mutation-status
      - status
    - constraintUID: 79ffa0c1-4e84-4b5b-9f79-569c03f8474c
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-4v7fp
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    - constraintUID: 79ffa0c1-4e84-4b5b-9f79-569c03f8474c
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-fhgs5
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    - constraintUID: 79ffa0c1-4e84-4b5b-9f79-569c03f8474c
      enforced: true
      id: gatekeeper-controller-manager-58bdb98859-jt2lf
      observedGeneration: 1
      operations:
      - mutation-webhook
      - webhook
    totalViolations: 6
    violations:
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container config-reloader missing CPU limit
      name: collector-t747w
      namespace: gmp-system
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container prometheus missing CPU limit
      name: collector-t747w
      namespace: gmp-system
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container config-reloader missing CPU limit
      name: collector-5tmjg
      namespace: gmp-system
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container prometheus missing CPU limit
      name: collector-5tmjg
      namespace: gmp-system
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container operator missing CPU limit
      name: gmp-operator-7559744d7-wz6q6
      namespace: gmp-system
      version: v1
    - enforcementAction: deny
      group: ""
      kind: Pod
      message: Container kube-state-metrics missing CPU limit
      name: kube-state-metrics-0
      namespace: gke-managed-cim
      version: v1
kind: List
metadata:
  resourceVersion: ""
